Ajout des precommande de Éther.

--- a/éther.html
+++ b/éther.html
@@ -595,6 +595,11 @@
             transform: translateY(-20px);
             /* Se soulève comme les autres mots */
         }
+        
+        h4 {
+            font-size: 1.5em;
+            margin-bottom: 25pxs;
+        }
     </style>
 </head>
 
@@ -697,6 +702,7 @@
     <div class="simple-separator"></div>
 
     <div class="pied-de-page">
+        <h4>Précommande sur iTunes & Amazon à partir de 2.58 soit 1.29/son</h4>
         <p>Morgann Music © 2025 Tout droits réserver.</p>
     </div>
 
