--- a/éther.html
+++ b/éther.html
@@ -598,7 +598,7 @@
         
         h4 {
             font-size: 1.5em;
-            margin-bottom: 25pxs;
+            margin-bottom: 25px;
         }
     </style>
 </head>
