Ajout de bannières

--- a/funky.html
+++ b/funky.html
@@ -5,7 +5,7 @@
     <title>Funky • Morgann Music Send</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta property="og:image" content="/funkyban.png">
+    <meta property="og:image" content="https://music.morgannmusic.uk/funkyban.png">
     <meta property="og:description" content="Funky sur toutes vos plateformes ! Découvrez Funky sur toutes vos plateformes préférées.">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
