Ajout des liens
Ajout des liens

--- a/funky.html
+++ b/funky.html
@@ -718,28 +718,28 @@
     <div class="simple-separator"></div>
 
     <div class="titre-page">
-        <h1>Lien vers Funky 🔗</h1>
+        <h1>Lien vers Funky 🎵🔗</h1>
 
     </div>
 
     <div id="image-container">
         <!-- Image Apple avec lien -->
-        <a href="https://music.apple.com/fr/artist/morgann-music/1820890727" target="_blank">
+        <a href="https://music.apple.com/fr/album/funky-single/1859788556" target="_blank">
             <img src="apple.png" alt="Lien vers Apple">
         </a>
 
         <!-- Image Spotify avec lien -->
-        <a href="https://open.spotify.com/intl-fr/album/73OkPFdRXRhrqgQmXvofwX?si=pQ_vvbKkRlyvYWDhOM9oUA" target="_blank">
+        <a href="https://open.spotify.com/intl-fr/album/03jWDCylGBl6BXYTUReCfx" target="_blank">
             <img src="spotify.png" alt="Lien vers Spotify">
         </a>
 
         <!-- Image Deezer avec lien -->
-        <a href="https://link.deezer.com/s/31FWnJBlRENRj1kFBLw5b" target="_blank">
+        <a href="https://www.deezer.com/fr/album/873163302" target="_blank">
             <img src="deezer.png" alt="Lien vers Deezer">
         </a>
 
         <!-- Image YouTube avec lien -->
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_kfOFsDyTVBD9KUltM6iNAJ1xcO8EfjzoA&si=AB_u5jyxb2UQCUy7" target="_blank">
+        <a href="https://music.youtube.com/playlist?list=OLAK5uy_mB_yfu3LetlBBeDmfDFREAaH0eZM0VwFY" target="_blank">
             <img src="yt.png" alt="Lien vers YouTube Music">
         </a>
     </div>
