Ajout de fonctionnalitées
Ajout de fonctionnalitées

--- a/index.html
+++ b/index.html
@@ -833,9 +833,9 @@
 
     <div id="image-container-2">
         <!-- Image Apple avec lien -->
-        <a href="https://www.feedback.morgannmusic.uk" target="_blank">
-            <img src="13.png" alt="Lien vers Apple">
-        </a>
+
+        <img src="trs.png" alt="Lien vers Apple">
+
 
         <!-- Image Spotify avec lien -->
         <a href="https://www.news.morgannmusic.uk/accueil" target="_blank">
@@ -843,14 +843,14 @@
         </a>
 
         <!-- Image Deezer avec lien -->
-        <a href="https://www.shop.morgannmusic.uk/" target="_blank">
-            <img src="11.png" alt="Lien vers Deezer">
+        <a href="https://www.feedback.morgannmusic.uk" target="_blank">
+            <img src="13png" alt="Lien vers Deezer">
         </a>
 
         <!-- Image YouTube avec lien -->
-        <a href="https://app.morgannmusic.uk/app" target="_blank">
-            <img src="12.png" alt="Lien vers YouTube">
-        </a>
+
+        <img src="trs.png" alt="Erreur">
+
     </div>
 
     <div class="simple-separator"></div>
