Ajout de fonctionnalités
Ajout de fonctionnalités

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
 
         <!-- Image Deezer avec lien -->
         <a href="https://www.feedback.morgannmusic.uk" target="_blank">
-            <img src="13png" alt="Lien vers Deezer">
+            <img src="13.png" alt="Lien vers Deezer">
         </a>
 
         <!-- Image YouTube avec lien -->
