Ajout de fonctionnalités
Ajout de fonctionnalités

--- a/404.html
+++ b/404.html
@@ -196,7 +196,7 @@
         .btn {
             background-color: #ffffff;
             border: 2px solid var(--texte-color-btn);
-            color: var(--text-color-btn);
+            color: #EA86D1;
             border: none;
             padding: 12px 24px;
             font-size: 18px;
