Ajout de la page LEVEL UP

--- a/404.html
+++ b/404.html
@@ -519,7 +519,7 @@
         .btn {
             background-color: #ffffff;
             border: 2px solid #e780aa;
-            color: var(--text-color-btn);
+            color: rosybrown;
             border: none;
             padding: 12px 24px;
             font-size: 18px;
@@ -762,8 +762,9 @@
                 <!-- MODIFIEZ CES LIENS pour votre nouveau site -->
                 <li><a href="index.html">Menu</a></li>
                 <li><a href="plateformes.html">Plateformes</a></li>
-                <li><a href="funky.html">Funky</a></li>
                 <li><a href="éther.html">Éther</a></li>
+                <li><a href="LEVEL-UP.html">LEVEL UP</a></li>
+
 
             </ul>
         </nav>
