--- a/SLINKY GROOVE.html
+++ b/SLINKY GROOVE.html
@@ -671,8 +671,9 @@
                 <!-- MODIFIEZ CES LIENS pour votre nouveau site -->
                 <li><a href="index.html">Menu</a></li>
                 <li><a href="plateformes.html">Plateformes</a></li>
-                <li><a href="funky.html">Funky</a></li>
                 <li><a href="éther.html">Éther</a></li>
+                <li><a href="LEVEL-UP.html">LEVEL UP</a></li>
+
 
             </ul>
         </nav>
