--- a/plateformes.html
+++ b/plateformes.html
@@ -675,8 +675,9 @@
                 <!-- MODIFIEZ CES LIENS pour votre nouveau site -->
                 <li><a href="index.html">Menu</a></li>
                 <li><a href="plateformes.html">Plateformes</a></li>
-                <li><a href="funky.html">Funky</a></li>
                 <li><a href="éther.html">Éther</a></li>
+                <li><a href="LEVEL-UP.html">LEVEL UP</a></li>
+
 
             </ul>
         </nav>
@@ -735,18 +736,18 @@
         </a>
 
         <!-- Image Spotify avec lien -->
-        <a href="https://open.spotify.com/intl-fr/album/73OkPFdRXRhrqgQmXvofwX?si=pQ_vvbKkRlyvYWDhOM9oUA" target="_blank">
+        <a href="https://open.spotify.com/intl-fr/artist/0WJlJdaavSKPNoCSSHb8OC?si=iWMUCcMzTGiiWx-EI9pkpw" target="_blank">
             <img src="spotify.png" alt="Lien vers Spotify">
         </a>
 
         <!-- Image Deezer avec lien -->
-        <a href="https://link.deezer.com/s/31FWnJBlRENRj1kFBLw5b" target="_blank">
+        <a href="https://www.deezer.com/fr/artist/330395931" target="_blank">
             <img src="deezer.png" alt="Lien vers Deezer">
         </a>
 
         <!-- Image YouTube avec lien -->
-        <a href="https://music.youtube.com/playlist?list=OLAK5uy_kfOFsDyTVBD9KUltM6iNAJ1xcO8EfjzoA&si=AB_u5jyxb2UQCUy7" target="_blank">
-            <img src="yt.png" alt="Lien vers YouTube Music">
+        <a href="https://music.youtube.com/channel/UCsnyx7G0XZhbhFAND2HXLpg" target="_blank">
+            <img src="yt.png" alt="Lien vers YouTube">
         </a>
     </div>
 
