--- a/LEVEL-UP.html
+++ b/LEVEL-UP.html
@@ -774,7 +774,7 @@
     <div class="simple-separator"></div>
 
     <div class="pied-de-page">
-        <h4>Précommande sur iTunes & Amazon à partir de 2.58 soit 1.29/son</h4>
+        <h4>Aucune précommande sera mise en place.</h4>
         <p>Morgann Music © 2025 Tout droits réserver.</p>
     </div>
 
