Ajout des banières

--- a/LEVEL-UP.html
+++ b/LEVEL-UP.html
@@ -5,12 +5,12 @@
     <title>LEVEL UP • Morgann Music Send</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta property="og:image" content="/banether.png">
+    <meta property="og:image" content="/banlu.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http - equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <link rel="icon" href="favicon-32x32.png">
-    <meta property="og:description" content="Éther sort le 25 Décembre sur toutes vos plateformes 🎁🎄 !">
+    <meta property="og:description" content="LEVEL UP sort le 1er Janvier sur toutes vos plateformes 🎆🎊 !">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
