--- a/LEVEL-UP.html
+++ b/LEVEL-UP.html
@@ -686,7 +686,7 @@
 
 
     <div class="titre-page">
-        <h1>sort le 1er Janvier 🎆🎊</h1>
+        <h1>Vient de sortir (Bonne Année 🎆🎊)</h1>
     </div>
 
 
@@ -712,29 +712,24 @@
         <li>Ancient Shrine</li>
     </ul>
 
-    <div class="row">
-        <a href="levelup-calendar.ics">
-            <button class="btn">Ajouter au calendrier</button>
 
-        </a>
-    </div>
 
 
     <div class="simple-separator"></div>
 
     <div class="titre-page">
-        <h1>Lien vers mes plateformes ! 🔗</h1>
+        <h1>Lien vers LEVEL UP !</h1>
 
     </div>
 
     <div id="image-container">
         <!-- Image Apple avec lien -->
-        <a href="https://music.apple.com/fr/artist/morgann-music/1820890727" target="_blank">
+        <a href="https://music.apple.com/album/1864513852" target="_blank">
             <img src="apple.webp" alt="Lien vers Apple">
         </a>
 
         <!-- Image Spotify avec lien -->
-        <a href="https://open.spotify.com/intl-fr/artist/0WJlJdaavSKPNoCSSHb8OC?si=iWMUCcMzTGiiWx-EI9pkpw" target="_blank">
+        <a href="https://open.spotify.com/intl-fr/album/3dA6s0uBW1KfC1OAbCg1SP" target="_blank">
             <img src="spotify.webp" alt="Lien vers Spotify">
         </a>
 
@@ -752,7 +747,7 @@
     <div class="simple-separator"></div>
 
     <div class="pied-de-page">
-        <h4>Aucune précommande sera mise en place.</h4>
+
         <p>Morgann Music © 2025 Tout droits réserver.</p>
     </div>
 
