--- a/LEVEL-UP.html
+++ b/LEVEL-UP.html
@@ -10,7 +10,7 @@
     <meta http - equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <link rel="icon" href="favicon-32x32.png">
-    <meta property="og:description" content="LEVEL UP sort le 1er Janvier sur toutes vos plateformes 🎆🎊 !">
+    <meta property="og:description" content="Bonne année ! Et sortout bonne écoute de LEVEL UP, l'album est diponible partout ! 🎉🔥">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0V4LLanw2qksYuMGFYw5U/yKzI5ZqD5v/e10z1x6+3Rz4m0S9K0P8v6C5w==" crossorigin="anonymous" referrerpolicy="no-referrer"
