--- a/LEVEL-UP.html
+++ b/LEVEL-UP.html
@@ -724,7 +724,7 @@
 
     <div id="image-container">
         <!-- Image Apple avec lien -->
-        <a href="https://music.apple.com/album/1864513852" target="_blank">
+        <a href="https://music.apple.com/fr/album/level-up/1864513852" target="_blank">
             <img src="apple.webp" alt="Lien vers Apple">
         </a>
 
@@ -734,12 +734,12 @@
         </a>
 
         <!-- Image Deezer avec lien -->
-        <a href="https://www.deezer.com/fr/artist/330395931" target="_blank">
+        <a href="https://www.deezer.com/fr/album/885538802" target="_blank">
             <img src="deezer.webp" alt="Lien vers Deezer">
         </a>
 
         <!-- Image YouTube avec lien -->
-        <a href="https://music.youtube.com/channel/UCsnyx7G0XZhbhFAND2HXLpg" target="_blank">
+        <a href="https://music.youtube.com/playlist?list=OLAK5uy_lVc4Z7dQGWPCYIHYY7gfqC8kLW2LTTwz0" target="_blank">
             <img src="yt.webp" alt="Lien vers YouTube">
         </a>
     </div>
