--- a/funky.html
+++ b/funky.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Funky • Morgann Music Send</title>
+    <title>Funky • Morgann Music Link</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta property="og:image" content="https://music.morgannmusic.uk/funkyban.png">
