--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>404 • Morgann Music Send</title>
+    <title>404 • Morgann Music Link</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta property="og:image" content="/ac.png">
