--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Morgann Music Send</title>
+    <title>Morgann Music Link</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta property="og:image" content="/ac.png">
@@ -845,6 +845,7 @@
     <div id="morgann-text" class="hero-text2">
         <span class="word">Morgann</span>
         <span class="word">Music</span>
+        <span class="word">Link</span>
 
     </div>
 
